# shared_ispell

./: .gitignore  LICENSE  Makefile  README.md  meson.build  shared_ispell--1.1.0.sql
expected/: security.out  security_1.out  shared_ispell.out
sql/: security.sql  shared_ispell.sql
src/: shared_ispell.c  shared_ispell.h
